--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -6,32 +6,46 @@
     <title>portfolio page</title>
 </head>
 <body>
+  <header>
     <h1>Nitish Kumar</h1>
     <p>I love  to code</p>
     <img src="image/hanuman.jpg" alt="nk" height="100px" width="100px">
+    <hr>
+  </header>
+  <section>
     <h2>Education</h2>
     <ul>
         <li><b>10 class (CBSE):</b>10 CGPA</li>
         <li><b>12 class (CBSE):</b>9 CGPA</li>
         <li><b> Bachelor in Engineering(COE):</b>8.9</li>
     </ul>
+    <hr>
+  </section>
+  <section>
     <h2>Skills</h2>
     <ul>
     <li>HTML, CSS, JavaScript</li>
     <li>Node.js, SQL</li>
     <li>JAVA, Python</li>
     </ul>
+    <hr>
+  </section>
+  <section>
     <h2>Hobbies</h2>
     
     <ul>
         <li>Reading</li>
         <li>Debating</li>
     </ul>
+    <hr>
+  </section>
+  <footer>
     <h2>Contact Me</h2>
     <ul>
         <li><b>Email :</b>nitishknitish777@gmail.com</li>
         <li><a href="www.linkedin.com">linkedin</a></li>
     </ul>
-    <p>made with &hearts; by nitish </p>
+    <h3>made with &hearts; by nitish</h3>
+  </footer>
 </body>
 </html>
