--- a/CSS/Grid.html
+++ b/CSS/Grid.html
@@ -9,11 +9,12 @@
 <body>
     <h1>Grid playground</h1>
     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
+        <div class="item one">1</div>
+        <div class="item two">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
         <div class="item">5</div>
     </div>
+    <span>this is my name</span>
 </body>
 </html>
